# marcopolo-bindings-cpp

./: CMakeLists.txt  MarcoCPPBindingConfig.cmake
include/: convert.hpp  marco.h  marco.hpp  node.hpp  parameter.h  polo.hpp  service.hpp
marcotest/: CMakeLists.txt
marcotest/src/: main  main.c
src/: main.cpp  marco.cpp  polo.cpp
tests/: test.c
